<resources>
    <string name="app_name">Manara</string>
    <string name="internal_error_message">Something went wrong. Please try again or check your connection</string>
    <string name="user_not_login_error">You\'ve been logged out. Please log in again</string>
    <string name="email_password_incorrect">Your email/password incorrect, please try again</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="email_used">This email is already used. Please use other email</string>
    <string name="password_length_error">Password must have minimum 8 digit length</string>
    <string name="password_confirm_error">Your confirmation password doesn\'t match</string>
    <string name="required_field">This field is required</string>
    <string name="permission_declined">Permission Declined</string>
    <string name="organization_joined">You are already in this organization</string>
    <string name="organization_not_found">Organization not found. Please check the organization code</string>
    <string name="organization_code_length">Organization code is 7 digit long</string>
    <string name="agenda_empty">Please fill the agenda</string>
    <string name="participant_empty">Please select participant</string>
    <string name="accept_suggestion_question">Do you want to accept this suggestion?</string>
    <string name="cancel_accept_suggestion_question">Do you want to cancel accepting this suggestion?</string>
    <string name="wrong_meeting_code">The code you entered is incorrect, please try again</string>
    <string name="start_meeting_question">Do you want to start this meeting?</string>
    <string name="end_meeting_question">Do you want to end this meeting?</string>
    <string name="agenda_delete_question">Do you want to delete this agenda?</string>
    <string name="agenda_meeting_question">Do you want to delete this meeting?</string>
    <string name="leaderboard_period_update_message">* Changes to the leaderboard period will take affect after the next period</string>
    <string name="meeting_reminder">%1$s will be held in %2$s day(s)</string>
    <string name="meeting_day_reminder">%1$s will be held today</string>
    <string name="meeting_started_notification">%1$s has been started.</string>
    <string name="meeting_ended_notification">%1$s has ended. You received %2$s XP during this meeting</string>
    <string name="achievement_get_notification">You have completed \'%1$s\' Achievement and received %2$s XP </string>
    <string name="level_up_notification">You have been leveled up to %1$s level</string>
    <string name="meeting_invitation_notification">You are invited to a meeting (%1$s) from %2$s</string>
    <string name="task_completed_on_time_notification">You have completed %1$s task on time. You received %2$s XP</string>
    <string name="task_completed_late_notification">You have completed %1$s task.</string>
    <string name="sign_out_question">Do you want to sign out?</string>
    <string name="mark_task_done_message">Are you sure to mark this task as done?</string>
    <string name="mark_agenda_done_message">Are you sure to mark this agenda as done?</string>
    <string name="no_suggestion_accepted">You can only mark this agenda as done after you accept at least one suggestion</string>
    <string name="cannot_mark_agenda_done">Unable to Mark as Done</string>
    <string name="delete_suggestion_message">Are you sure want to delete this suggestion? \nnote: this action can not be undone.</string>
    <string-array name="leaderboard_periods">
        <item>Every 1 month</item>
        <item>Every 3 months</item>
        <item>Every 6 months</item>
        <item>Every 1 year</item>
    </string-array>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="back">back</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="save">Save</string>
    <string name="take_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="refresh">Refresh</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="add">Add</string>
    <string name="organization_name">Organization Name</string>
    <string name="description">Description</string>
    <string name="create_organization">Create Organization</string>
    <string name="edit_organization">Edit Organization</string>
    <string name="join_organization">Join Organization</string>
    <string name="organization_code">Organization Code</string>
    <string name="meetings">Meetings</string>
    <string name="members">Members</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="send_email">Send email</string>
    <string name="meeting_not_started">Not yet started</string>
    <string name="meeting_started">Meeting Started</string>
    <string name="meeting_ended">Meeting Ended</string>
    <string name="title">Title</string>
    <string name="location_link">Location / Link</string>
    <string name="date">Date</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="enter_start_time">Enter start time</string>
    <string name="enter_end_time">Enter end time</string>
    <string name="add_participant">Add Participant</string>
    <string name="participant_count">%1$s participant(s)</string>
    <string name="add_agenda">Add Agenda</string>
    <string name="agenda_count">%1$s list(s)</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="add_agenda_plus">+ Add Agenda</string>
    <string name="no_data">No Data</string>
    <string name="search">Search</string>
    <string name="tab_detail">detail</string>
    <string name="tab_agenda">Agenda</string>
    <string name="tab_participant">Participant</string>
    <string name="agenda_task">%1$s. %2$s</string>
    <string name="set_as_admin">Set as admin</string>
    <string name="set_as_member">Set as member</string>
    <string name="agenda_detail">Agenda Detail</string>
    <string name="more">More</string>
    <string name="write_a_suggestion">Write a suggestion</string>
    <string name="add_suggestion">Add Suggestion</string>
    <string name="start_meeting">Start Meeting</string>
    <string name="end_meeting">End Meeting</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="meeting_joined">Meeting Joined</string>
    <string name="show_code">Show code</string>
    <string name="meeting_code_data">Meeting code: %1$s</string>
    <string name="organization_code_data">Organization code: %1$s</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="not_yet_accepted">Not yet accepted</string>
    <string name="please_wait">Please Wait</string>
    <string name="meeting_code">Meeting Code</string>
    <string name="suggestion_status">Status: %1$s</string>
    <string name="edit">Edit</string>
    <string name="minutes">Minutes</string>
    <string name="suggested_by">Suggested by : %1$s</string>
    <string name="show_minutes">Show Minutes</string>
    <string name="no_suggestion">No suggestion</string>
    <string name="agenda">Agenda</string>
    <string name="edit_agenda">Edit Agenda</string>
    <string name="delete_agenda">Delete Agenda</string>
    <string name="agenda_edited">Agenda edited</string>
    <string name="agenda_deleted">Agenda deleted</string>
    <string name="edit_meeting">Edit Meeting</string>
    <string name="delete_meeting">Delete Meeting</string>
    <string name="meeting_edited">Meeting edited</string>
    <string name="meeting_deleted">Meeting deleted</string>
    <string name="attachment">Attachment</string>
    <string name="file_uploaded">File Uploaded</string>
    <string name="leaderboard_period">Leaderboard Period :</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="reward">Reward: %1$s XP</string>
    <string name="achievement">Achievement</string>
    <string name="points">%1$s points</string>
    <string name="leaderboard_period_date">Period: %1$s - %2$s</string>
    <string name="lorem50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut ex congue, fringilla metus non, blandit quam. Suspendisse porttitor justo quis porta mattis. Donec pretium nec tortor quis vulputate. Nullam vehicula efficitur magna nec molestie. Duis ornare tortor sit amet risus vestibulum dignissim. Maecenas ut nibh velit. Aenean augue enim.</string>
    <string name="leaderboard_period_duration">Leaderboard Period Duration: Every %1$s month(s)</string>
    <string name="leaderboard_current_period">Leaderboard Current Period: %1$s period</string>
    <string name="organization_detail">Organization Detail</string>
    <string name="task">Task</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="meeting_reminder_title">Meeting Reminder</string>
    <string name="achievement_get_title">Achievement Get</string>
    <string name="level_up_title">Level Up</string>
    <string name="meeting_invitation_title">Meeting Invitation</string>
    <string name="add_task">Add Task</string>
    <string name="deadline">Deadline</string>
    <string name="assign_to">Assign To</string>
    <string name="select_person">Select person</string>
    <string name="task_added">Task added</string>
    <string name="not_completed">Not Completed</string>
    <string name="completed">Completed</string>
    <string name="assign_to_someone">Assign to: %1$s</string>
    <string name="deadline_at">Deadline: %1$s</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="task_done">Task done</string>
    <string name="participant">Participant</string>
    <string name="leader">Meeting Leader</string>
    <string name="task_completed_notification_title">Task Completed</string>
    <string name="present">Present</string>
    <string name="not_yet_present">Not Yet/Not Present</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_updated">Profile updated</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="history_period">Period: %1$s</string>
    <string name="no_next_history">There is no next data</string>
    <string name="no_prev_history">There is no previous data</string>
    <string name="leaderboard_history">Leaderboard History</string>
    <string name="no_history">No history</string>
    <string name="about">About</string>
    <string name="developed_by">Developed By:</string>
    <string name="developer_name">Hueyan Roberto</string>
    <string name="supervisor">Supervisor:</string>
    <string name="supervisor_1">Melissa Angga, S.T., M.M.Comp.</string>
    <string name="supervisor_2">Andre, S.T., M.Sc.</string>
    <string name="version">Version %1$s</string>
    <string name="success">Success</string>
    <string name="note">Note (optional)</string>
    <string name="real_time">Real Time :</string>
</resources>