<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="@dimen/cardRadius"
    app:cardElevation="@dimen/cardElevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_card_task"
        android:background="@color/primary_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_task_title"
            style="@style/textStyle.subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            tools:text="Task Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_task_assign"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/assign_to_someone"
            app:layout_constraintEnd_toEndOf="@+id/text_task_title"
            app:layout_constraintStart_toStartOf="@+id/text_task_title"
            app:layout_constraintTop_toBottomOf="@+id/text_task_title" />

        <TextView
            android:id="@+id/text_task_deadline"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/deadline_at"
            app:layout_constraintEnd_toEndOf="@+id/text_task_assign"
            app:layout_constraintStart_toStartOf="@+id/text_task_assign"
            app:layout_constraintTop_toBottomOf="@+id/text_task_assign" />

        <TextView
            android:id="@+id/text_task_status"
            style="@style/whiteTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_pill_primary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/not_completed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_task_deadline"
            app:layout_constraintTop_toBottomOf="@+id/text_task_deadline" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>