<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:id="@+id/detail_organization_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/organization_detail"
                    style="@style/textStyle.subtitle"/>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.organization.DetailOrganizationActivity">

            <ImageView
                android:id="@+id/image_organization_detail"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/text_organization_detail_name"
                style="@style/textStyle.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="Organization Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_organization_detail" />

            <TextView
                android:id="@+id/text_organization_detail_desc"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lorem50"
                app:layout_constraintEnd_toEndOf="@+id/text_organization_detail_name"
                app:layout_constraintStart_toStartOf="@+id/text_organization_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/text_organization_detail_name" />

            <TextView
                android:id="@+id/text_organization_detail_leaderboard_duration"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/leaderboard_period_duration"
                app:layout_constraintEnd_toEndOf="@+id/text_organization_detail_desc"
                app:layout_constraintStart_toStartOf="@+id/text_organization_detail_desc"
                app:layout_constraintTop_toBottomOf="@+id/text_organization_detail_desc" />

            <TextView
                android:id="@+id/text_organization_detail_leaderboard_period"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/leaderboard_current_period"
                app:layout_constraintEnd_toEndOf="@+id/text_organization_detail_desc"
                app:layout_constraintStart_toStartOf="@+id/text_organization_detail_desc"
                app:layout_constraintTop_toBottomOf="@+id/text_organization_detail_leaderboard_duration" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>